# nix-devshells-

./: LICENSE  README.md  flake.nix  lib.nix
c/: .gitignore  flake.nix
c/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
c/.direnv/flake-inputs/: n4nslvz946dgfafr87qgrk017c2wa8p2-source
modules/c/: CMakeLists.txt  flake.nix
modules/c/src/: main.c
modules/java/: flake.nix
modules/ocaml/: flake.nix
